--- a/packages/posicion-seudoclases/practica1.html
+++ b/packages/posicion-seudoclases/practica1.html
@@ -7,12 +7,29 @@
     <link rel="stylesheet" href="src/css/estiloscss.css">
 </head>
 <body>
-    <h1 class="text-3xl font-bold underline">
-         <nav>
+    
+         <!-- <nav>
             <a href="https://alexcgdesign.com" class="enlace">Inicio</a>
             <a href="https://alexcgdesign.com/blog" class="enlace" target="_blank">Acerca de</a>
             <a href="https://alex.com" class="enlace">contacto</a>
-         </nav>
-    </h1>
+         </nav> -->
+       
+        <!-- <a href="#objetivo" class="event">Disparador</a>
+        <a href="#" class="event">Retroceso</a>
+        <div class="box" id="objetivo">
+
+        </div> -->
+
+        <form class="form">
+            <h2 class="form__title">Contacto</h2>
+            <input type="text" name="" id="" placeholder="Nombre">
+            <input type="email" name="" id="" placeholder="Email">
+            <input type="checkbox" name="" id="check">
+            <label for="check">
+                ¿Te gusta el curso?
+            </label>
+        </form>
+        <h3 class="title">Hola Mundo 1</h3>
+        <h3 >Hola Mundo 2</h3>
 </body>
 </html>
